force-app/main/default/objects/Job_Resource__c/Job_Resource__c.object-meta.xml
<CustomObject>
    <label>Job Resource</label>
    <nameField>
        <label>Resource Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>