force-app/main/default/objects/Job_Resource__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look-up to Opportunity object</description>
    <label>Job</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Job Resources</relationshipLabel>
    <relationshipName>Job_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>