force-app/main/default/objects/Job_Resource__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>