force-app/main/default/objects/Job_Resource__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Contact record filtered by Resource Flag on Contact Record</description>
    <label>Resource Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <value>0017000000tNzn8</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Resources</relationshipLabel>
    <relationshipName>Job_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>