force-app/main/default/objects/Job_Resource__c/fields/Resource_Title__c.field-meta.xml
<CustomField>
    <fullName>Resource_Title__c</fullName>
    <formula>Resource_Name__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Title</label>
    <type>Text</type>
</CustomField>