force-app/main/default/objects/Job_Resource__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>