force-app/main/default/objects/Job_Resource__c/fields/Scheduler_Color__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Color__c</fullName>
    <formula>Project_Manager__r.Scheduler_Color__c</formula>
    <label>Scheduler Color</label>
    <type>Text</type>
</CustomField>