force-app/main/default/objects/Job_Resource__c/fields/Scheduler_Display__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Display__c</fullName>
    <label>Scheduler_Display</label>
    <length>36</length>
    <type>Text</type>
</CustomField>