force-app/main/default/objects/Job_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project_Manager__c</columns>
    <columns>Resource_Name__c</columns>
    <columns>Resource_Title__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Resource Assignments</label>
</ListView>